kubernetes/infrastructure/longhorn/auth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-auth
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://oauth2-proxy.security.svc.cluster.local:80/?allowed_groups=this-is-a-fake-group-id
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
